// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AdvancedBlock should render correctly for autofocus, diode 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock AutoFocus
            </div>
            <div>
              Mock Diode
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly for lower focus, diode 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock FocusBlock: 
              default
            </div>
            <div>
              Mock Diode
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly for non-printer, no addon 1`] = `<div />`;

exports[`test AdvancedBlock should render correctly for printer 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock SingleColorBlock
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly for printer 4c 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock AmDensityBlock
            </div>
            <div>
              Mock RefreshIntervalBlock
            </div>
            <div>
              Mock ColorAdvancedSettingButton
            </div>
            <div>
              Mock RefreshThresholdBlock
            </div>
            <div>
              Mock NozzleBlock
            </div>
            <div>
              Mock SingleColorBlock
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly for promark desktop 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock FrequencyBlock
            </div>
            <div>
              Mock WobbleBlock
            </div>
            <div>
              Mock FocusBlock: 
              default
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly for promark mopa 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock PulseWidthBlock
            </div>
            <div>
              Mock FrequencyBlock
            </div>
            <div>
              Mock WobbleBlock
            </div>
            <div>
              Mock FocusBlock: 
              default
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AdvancedBlock should render correctly with curve engraving 1`] = `
<div>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-ghost container css-dev-only-do-not-override-hash"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="expanded"
            class="anticon anticon-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          Advanced
        </span>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="panel"
          >
            <div>
              Mock CurveEngravingZHighSpeed
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
